--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@ html{
 
   h1{
       display: flex;
-      width: 75%;
+      width: 15ch;
   }
 
   p{
@@ -156,24 +156,24 @@ html{
 
 /* ---------------------------------media queries------------------------------ */
 
-/* @media screen and(max-width: 375px) {
+@media screen and(max-width: 720px) {
 
     body{
-    font-size: 1rem;
-    font-family: 'League Spartan', sans-serif;
-    background: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
-    background-repeat: no-repeat,no-repeat;
-    background-position: top left, bottom right ;
-    }
-    .header-container, .aside-container, .review-container{
-        display:flex;
-        min-width: 100%;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    }
+        font-size: 1rem;
+        font-family: 'League Spartan', sans-serif;
+        background: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
+        background-repeat: no-repeat,no-repeat;
+        background-position: top left, bottom right ;
+        }
 
-    
+        .header-container{
+            display:flex;
+            color: hsl(300, 43%, 22%);
+            margin: 40px 600px -20px 60px;
+            flex-direction: column;
+            width: 20ch;
+            font-size: 1.8rem;
+        } 
 
 
-}  */
+} 
